# varpro-blocks

./: .gitmodules  CMakeLists.txt  README.md  setup.py
cmake/: ReplicatePythonSourceTree.cmake
examples/: varpro.ipynb
include/: arma.pxd  arma_module.h  arma_objects.h  blocks.pxd  test_templating.h  varpro-block.h  varpro.h  varpro_module.h  varpro_objects.h  varpro_util.h  varprocpp.pxd
src/: CMakeLists.txt  __init__.py  arma.pyx  arma_module.cpp  arma_objects.cpp  test_arma.py  test_pybind.cpp  test_varpro_module.py  varpro-block.cpp  varpro.cpp  varpro.pyx  varpro_module.cpp  varpro_objects.cpp  varpro_util.cpp  varprocpp.pyx  varproold.pyx
